fix: fix width break in welcome section

--- a/museum-adaptive/css-adaptive.css
+++ b/museum-adaptive/css-adaptive.css
@@ -282,6 +282,7 @@
     height: 100px;
     margin-top: 0;
     justify-content: center;
+    padding: 0;
 }
 
   .welcome__content-wrapper {
